@@ -1,6 +1,14 @@
 Changes from jTDS 1.3.1
 =======================
 
+10/29/2013 - Holger Rehn
+ o Fixed savepoint functionality for Sybase ASE that has been broken by the fix
+   for bug #569.
+
+10/28/2013 - Holger Rehn
+ o Fixed a bug that could cause an empty value being returned as a single
+   whitespace when using Sybase ASE.
+
 10/15/2013 - Holger Rehn
  o Implemented support for the COMPUTE (BY) operator (bug #678) for Sybase ASE.
 
